--- a/Act1_Clase_Boostrap/index.html
+++ b/Act1_Clase_Boostrap/index.html
@@ -1,1 +1,124 @@
-
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Formulario con Bootstrap</title>
+    <!-- Enlace a Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+    <div class="container mt-5">
+        <h2 class="mb-4">Información Personal</h2>
+        <form>
+            <!-- Nombres -->
+            <div class="mb-3 row">
+                <label for="nombres" class="col-sm-2 col-form-label">Nombres</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="nombres" placeholder="Ingrese sus nombres">
+                </div>
+            </div>
+            <!-- Número de cédula -->
+            <div class="mb-3 row">
+                <label for="cedula" class="col-sm-2 col-form-label">Número de cédula</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="cedula" placeholder="Ingrese su número de cédula">
+                </div>
+            </div>
+            <!-- Fecha de nacimiento -->
+            <div class="mb-3 row">
+                <label for="fechaNacimiento" class="col-sm-2 col-form-label">Fecha de nacimiento</label>
+                <div class="col-sm-10">
+                    <input type="date" class="form-control" id="fechaNacimiento">
+                </div>
+            </div>
+            <!-- Ciudad -->
+            <div class="mb-3 row">
+                <label for="ciudad" class="col-sm-2 col-form-label">Ciudad</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="ciudad" placeholder="Ingrese su ciudad">
+                </div>
+            </div>
+            <!-- Correo -->
+            <div class="mb-3 row">
+                <label for="correo" class="col-sm-2 col-form-label">Correo</label>
+                <div class="col-sm-10">
+                    <input type="email" class="form-control" id="correo" placeholder="Ingrese su correo">
+                </div>
+            </div>
+            <!-- Teléfono -->
+            <div class="mb-3 row">
+                <label for="telefono" class="col-sm-2 col-form-label">Teléfono</label>
+                <div class="col-sm-10">
+                    <input type="tel" class="form-control" id="telefono" placeholder="Ingrese su teléfono">
+                </div>
+            </div>
+            <!-- Dirección -->
+            <div class="mb-3">
+                <label for="direccion" class="form-label">Dirección</label>
+                <textarea class="form-control" id="direccion" rows="3" placeholder="Ingrese su dirección"></textarea>
+            </div>
+            <!-- Estado civil -->
+            <div class="mb-3">
+                <label for="estadoCivil" class="form-label">Estado civil</label>
+                <select class="form-select" id="estadoCivil">
+                    <option selected disabled>Seleccione su estado civil</option>
+                    <option value="soltero">Soltero</option>
+                    <option value="casado">Casado</option>
+                    <option value="divorciado">Divorciado</option>
+                </select>
+            </div>
+            <!-- Etnia -->
+            <div class="mb-3">
+                <label for="etnia" class="form-label">Etnia</label>
+                <select class="form-select" id="etnia">
+                    <option selected disabled>Seleccione su etnia</option>
+                    <option value="blanco">Blanco</option>
+                    <option value="mestizo">Mestizo</option>
+                    <option value="afroecuatoriano">Afroecuatoriano</option>
+                </select>
+            </div>
+            <!-- Género -->
+            <div class="mb-3">
+                <label class="form-label">Género</label>
+                <div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="genero" id="masculino" value="masculino">
+                        <label class="form-check-label" for="masculino">Masculino</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="genero" id="femenino" value="femenino">
+                        <label class="form-check-label" for="femenino">Femenino</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="genero" id="otros" value="otros">
+                        <label class="form-check-label" for="otros">Otros</label>
+                    </div>
+                </div>
+            </div>
+            <!-- Hábitos -->
+            <div class="mb-3">
+                <label class="form-label">Hábitos</label>
+                <div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="fuma" value="fuma">
+                        <label class="form-check-label" for="fuma">Fuma</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="tomaAlcohol" value="tomaAlcohol">
+                        <label class="form-check-label" for="tomaAlcohol">Toma alcohol</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="consumeDrogas" value="consumeDrogas">
+                        <label class="form-check-label" for="consumeDrogas">Consume drogas</label>
+                    </div>
+                </div>
+            </div>
+            <!-- Botón de envío -->
+            <button type="submit" class="btn btn-primary">Enviar</button>
+        </form>
+    </div>
+    <!-- Enlace a Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
